# numbers

./: .gitignore  pyproject.toml
.agent/skills/engram/: SKILL.md
core/: Cargo.toml
core/src/: division.rs  lib.rs  multiplicacion.rs  porcentaje.rs  resta.rs  suma.rs
exceptions/: calculator.py
openspec/: project.md
openspec/changes/archive/2026-03-31-core-logic-module/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-31-core-logic-module/specs/division-operation/: spec.md
openspec/changes/archive/2026-03-31-core-logic-module/specs/multiplicacion-operation/: spec.md
openspec/changes/archive/2026-04-02-multi-value-operations/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-06-add-rust-tests-and-coverage-report/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-08-fix-ui-window-scaling/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-08-ui-implementation/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-08-ui-implementation/specs/: README.md
openspec/changes/gitignore-setup/: design.md  proposal.md  tasks.md
openspec/changes/gitignore-setup/specs/gitignore-config/: spec.md
openspec/specs/rust-native-testing/: spec.md
openspec/specs/test-coverage-reporting/: spec.md
schemas/: calculation.py
services/: calculator_service.py
tests/: test_core.py  test_services.py
ui/: __init__.py  app.py  layout.py  theme.py
ui/panels/: __init__.py  display.py  keypad.py
(+4 files in other folders)
